<resources>
    <string name="app_name">Anony Browser</string>
    <string name="vpn_fgs_special_use_subtype" translatable="false">Persistent VPN protection status bar</string>
    <string name="cochannel_name" translatable="false">ActionBar For VPN</string>
    <string name="set_notification_title">Allow notifications</string>
    <string name="set_notification_text">This way, you’ll stay updated with the latest security and privacy alerts in real time.</string>
    <string name="set_notification_allow">Allow</string>
    <string name="set_notification_later">Later</string>
    <string name="notification_permission_tips_title">Tips</string>
    <string name="notification_permission_tips_message">Grant notification permission to ensure timely news reception</string>
    <string name="notification_permission_confirm">Confirm</string>
    <string name="notification_channel_news">Trending news</string>
    <string name="news_open">See What\'s Hot</string>
    <string name="news_banner_title">Trending news</string>
    <string name="news_banner_empty">News is unavailable right now.</string>
    <string name="notification_open">Open</string>
    <string name="pop_d_0">Top stories are ready to read</string>
    <string name="pop_d_1">Technology headlines are moving fast</string>
    <string name="pop_d_2">Business news to catch up on</string>
    <string name="pop_d_3">Your daily world news brief is ready</string>
    <string name="pop_d_4">New science stories are trending</string>
    <string name="pop_d_5">Entertainment headlines are waiting</string>
    <string name="pop_d_6">Sports updates are in</string>
    <string name="pop_d_7">Health news worth a look</string>
    <string name="pop_d_8">Local news is ready to browse</string>
    <string name="pop_d_9">Take a quick look at today\'s headlines</string>
    <string name="pop_j_0">Catch up on the latest top stories</string>
    <string name="pop_j_1">Fresh technology news is available</string>
    <string name="pop_j_2">See what is happening in business</string>
    <string name="pop_j_3">World news has new updates</string>
    <string name="pop_j_4">Explore today\'s science headlines</string>
    <string name="pop_j_5">New entertainment news is live</string>
    <string name="pop_j_6">Sports headlines have changed</string>
    <string name="pop_j_7">Browse the latest health news</string>
    <string name="pop_j_8">Check the newest local stories</string>
    <string name="pop_j_9">Open your personalized news roundup</string>
    <string name="pop_m_0">Your scheduled top stories brief is ready</string>
    <string name="pop_m_1">Technology news has fresh updates</string>
    <string name="pop_m_2">Business headlines are ready to browse</string>
    <string name="pop_m_3">A new world news brief is available</string>
    <string name="pop_m_4">Science stories are ready for you</string>
    <string name="pop_m_5">Entertainment news has new highlights</string>
    <string name="pop_m_6">Latest sports stories are ready</string>
    <string name="pop_m_7">Your health news briefing is available</string>
    <string name="pop_m_8">See the newest local headlines</string>
    <string name="pop_m_9">Your daily news roundup is ready</string>
    <string name="set_browser_title">Make Anony Browser your default browser</string>
    <string name="set_browser_text">Setting it as your default browser centralizes your web activity, offering consistent features and settings across links. All to provide you a seamless experience.\n\nClick Set as Default button and select "Gate Browser" in the open dialog</string>
    <string name="set_browser_allow">Set as Default</string>
    <string name="set_browser_later">Later</string>
    <string name="set_browser_already_default">Already set as default browser</string>
    <string name="set_browser_open_settings_failed">Unable to open default app settings</string>
    <string name="browser_back">Back</string>
    <string name="browser_forward">Forward</string>
    <string name="browser_vpn">VPN</string>
    <string name="browser_tabs">Tabs</string>
    <string name="browser_menu">Menu</string>
    <string name="browser_search">Search</string>
    <string name="browser_search_hint">Search or enter URL</string>
    <string name="popular_searches_title">Popular Searches \uD83D\uDD25</string>
    <string name="search_history_more">More history</string>
    <string name="search_history_delete">Delete history</string>
    <string name="search_history_delete_all">Delete all</string>
    <string name="search_history_finish">Finish</string>
    <string name="search_history_delete_item">Remove search</string>
    <string name="search_history_delete_all_confirm">Delete all search history?</string>
    <string name="browser_add_shortcut">Add shortcut</string>
    <string name="browser_shortcut_name">Name</string>
    <string name="browser_shortcut_url">URL</string>
    <string name="browser_save">Save</string>
    <string name="browser_cancel">Cancel</string>
    <string name="browser_new_tab">New tab</string>
    <string name="browser_refresh">Refresh</string>
    <string name="browser_stop_loading">Stop loading</string>
    <string name="browser_bookmark">Bookmark current page</string>
    <string name="browser_seamless">Seamless</string>
    <string name="browser_seamless_on">Seamless On</string>
    <string name="browser_history">History</string>
    <string name="browser_share">Share</string>
    <string name="browser_downloads">Downloads</string>
    <string name="browser_settings">Settings</string>
    <string name="browser_clear_data">Clear browsing data</string>
    <string name="browser_close_tab">Close Tab</string>
    <string name="browser_no_page">No page is open</string>
    <string name="browser_invalid_shortcut">Please enter a name and URL</string>
    <string name="browser_security_status">Security status</string>
    <string name="browser_secure_connection">Secure connection</string>
    <string name="browser_invalid_url">Invalid URL</string>
    <string name="browser_no_internet_connection">No Internet Connection</string>
    <string name="browser_error_no_internet_title">No Internet</string>
    <string name="browser_error_no_internet_message">No Internet Connection</string>
    <string name="browser_error_timeout_title">Connection timed out</string>
    <string name="browser_error_timeout_message">The page took too long to respond. Check your connection and try again.</string>
    <string name="browser_error_404_title">404</string>
    <string name="browser_error_404_message">The page you are looking for can\'t be found.</string>
    <string name="browser_error_server_title">Server error</string>
    <string name="browser_error_server_message">The server could not complete the request. Please try again.</string>
    <string name="browser_error_unexpected_title">Unexpected error</string>
    <string name="browser_error_unexpected_message">Something happened! The browser ran into an unexpected condition and can\'t fulfill the request.</string>
    <string name="browser_ssl_warning_title">Your connection is not private</string>
    <string name="browser_ssl_warning_message">This site\'s security certificate could not be verified.</string>
    <string name="browser_reload_page">RELOAD PAGE</string>
    <string name="browser_try_again">TRY AGAIN</string>
    <string name="browser_return">Back</string>
    <string name="browser_continue_anyway">Continue anyway</string>
    <string name="tabs_opened_title">Opened Tabs</string>
    <string name="tabs_new_tab">New tab</string>
    <string name="tabs_select_tabs">Select Tabs</string>
    <string name="tabs_close_all">Close All Tabs</string>
    <string name="tabs_selected_count">Selected: %1$d</string>
    <string name="tabs_empty_title">No webpages opened yet</string>
    <string name="tabs_empty_message">Here you will find a list of websites open in your browser.</string>
    <string name="shortcut_add_title">Add a shortcut</string>
    <string name="shortcut_edit_title">Edit shortcut</string>
    <string name="shortcut_name_hint">shortcut name</string>
    <string name="shortcut_url_hint">website URL</string>
    <string name="shortcut_edit">Edit</string>
    <string name="shortcut_delete_confirm">Delete this shortcut?</string>
    <string name="shortcut_empty">Click the plus sign to add a shortcut website</string>
    <string name="history_select">Select</string>
    <string name="history_select_count">Select : %1$d</string>
    <string name="history_delete">Delete</string>
    <string name="history_delete_confirm">Delete the selected sites from the browser history?</string>
    <string name="history_open_new_tab">Open In New Tab</string>
    <string name="history_copy_link">Copy Link</string>
    <string name="history_link_copied">Link copied</string>
    <string name="history_empty_title">No Browsing History</string>
    <string name="history_empty_message">Sites you visit will show up here.</string>
    <string name="history_group_today">TODAY - %1$s</string>
    <string name="history_group_yesterday">YESTERDAY - %1$s</string>
    <string name="history_group_earlier">EARLIER</string>
    <string name="history_expand">Expand</string>
    <string name="history_collapse">Collapse</string>
    <string name="vpn_stats_empty_title">No Statistics Yet</string>
    <string name="vpn_stats_empty_message">Start Using Anony Browser To See The Security &amp; Privacy Center Report Here.</string>
    <string name="vpn_node_selection_title">Node Selection</string>
    <string name="vpn_node_switch_blocked">Please disconnect before switching nodes.</string>
    <string name="vpn_nodes_empty_title">No servers available</string>
    <string name="vpn_nodes_empty_message">There are currently no available servers, please try again later.</string>
    <string name="settings_section_appearance">APPEARANCE</string>
    <string name="settings_section_about">ABOUT</string>
    <string name="settings_section_reset">RESET</string>
    <string name="settings_address_bar_bottom">Address bar on bottom</string>
    <string name="settings_address_bar_center">Center Address Bar</string>
    <string name="settings_address_bar_top">Address bar on top</string>
    <string name="settings_version_format">Version %1$s</string>
    <string name="settings_check_for_updates">Check for updates</string>
    <string name="settings_privacy_policy">Privacy Policy</string>
    <string name="settings_privacy_policy_url" translatable="false">https://sites.google.com/view/weblora-privatebrowservpn/home</string>
    <string name="settings_reset_default">Reset to default settings</string>
    <string name="settings_reset_browser">Reset Avast Secure Browser</string>
    <string name="settings_reset_default_confirm">Reset appearance settings to default?</string>
    <string name="settings_reset_browser_confirm">This will clear browsing history, open tabs, and custom shortcuts. Continue?</string>
    <string name="settings_reset_confirm">Reset</string>
    <string name="rate_us_title">Rate us</string>
    <string name="rate_us_initial_message">Could you give us your feedback as well?</string>
    <string name="rate_us_action">Rate us</string>
    <string name="rate_us_star_1">Rate 1 star</string>
    <string name="rate_us_star_2">Rate 2 stars</string>
    <string name="rate_us_star_3">Rate 3 stars</string>
    <string name="rate_us_star_4">Rate 4 stars</string>
    <string name="rate_us_star_5">Rate 5 stars</string>
    <string name="settings_language">Language</string>
    <string name="lead_ok">OK</string>
    <string name="language_english">English</string>
    <string name="language_traditional_chinese">繁體中文</string>
    <string name="language_japanese">日本語</string>
    <string name="language_korean">한국어</string>
    <string name="language_spanish">Español</string>
    <string name="language_portuguese">Português</string>
    <string name="language_arabic">العربية</string>
</resources>